--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,7 +1,10 @@
 name: Docker
-on: [push]
+on:
+  push:
+    branches: [ $default-branch ]
+    tags: [ 'v*.*.*' ]
 jobs:
-  asd:
+  build:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello world!"
