--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,7 +1,8 @@
 name: Docker
 on:
   push:
-    branches: [ $default-branch ]
+#    branches: [ $default-branch ]
+    # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
 jobs:
   build:
